# sway-research

./: README.md
vecheap/: Cargo.toml  Forc.toml  README.md
vecheap/src/: main.sw
vecheap/tests/: harness.rs
