[package]
name = "vecheap"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["jtriley.eth"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.33", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
plotters = "0.3.4"

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
